[gd_scene load_steps=3 format=3 uid="uid://dvriu1uuergvg"]

[ext_resource type="Script" uid="uid://bkiihhf40hcn6" path="res://scripts/multiplayer/censored_name_line.gd" id="1_le2dr"]
[ext_resource type="Texture2D" uid="uid://dbyqxeq1nowwm" path="res://misc/diceIcon.webp" id="2_suodo"]

[node name="nameLine" type="LineEdit"]
custom_minimum_size = Vector2(200, 0)
offset_right = 200.0
offset_bottom = 31.0
size_flags_horizontal = 4
placeholder_text = "lobby name here"
expand_to_text_length = true
emoji_menu_enabled = false
middle_mouse_paste_enabled = false
script = ExtResource("1_le2dr")

[node name="validityIndicator" type="ColorRect" parent="."]
show_behind_parent = true
custom_minimum_size = Vector2(10, 0)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 0
color = Color(1, 0.105882, 0.0705882, 1)

[node name="randomButton" type="Button" parent="validityIndicator"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("2_suodo")
icon_alignment = 1
expand_icon = true

[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="pressed" from="validityIndicator/randomButton" to="." method="_on_random_button_pressed"]
